fix footer responsivness on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,7 @@ a:hover {
     margin-top: 20px;
     background-image: url(../public/dividers/animated-waves-footer.svg);
     margin-bottom: -1px;
+    margin-top: -1px;
 }
 
 .divider-tilted-triange {
@@ -760,12 +761,6 @@ a:hover {
     .footer-text p span:nth-child(1) {
         color: #262626;
     }
-
-    .footer-text p span:nth-child(2),
-    .footer-text p span:nth-child(3),
-    .footer img {
-        display: none;
-    }
 }
 
 @media (max-width: 700px) {
@@ -773,21 +768,30 @@ a:hover {
         display: none;
     }
 
-    .footer {
-        background: none;
-    }
-
     .divider-animated-waves-footer {
         display: none;
+    }
+
+    .footer {
+        background: none;
+        align-items: flex-end;
+    }
+
+    .footer-text {
+        flex-basis: 100%;
+        margin-bottom: 10px;
+        margin-top: 30px;
     }
 
     .footer, .footer-text {
         justify-content: center;
     }
 
-    .footer-text {
-        flex-basis: 100%;
-        margin-bottom: 10px;
+    .footer-text p span:nth-child(2),
+    .footer-text p span:nth-child(3),
+    .footer img,
+    .footer a {
+        display: none;
     }
 }
 
